# Labs-2-cours

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
headers/: Movie.h  MovieDatabase.h  MovieErrorExceptions.h  map_requests.h
headers/database/: DBManager.h  MoviesDBManager.h
headers/filters/: Filters.h  MovieFilters.h
headers/interface/: MainWindow.h
headers/models/: Movie.h
headers/repositories/: IMoviesRepository.h
source/: Movie.cpp  MovieDatabase.cpp  MovieErrorExceptions.cpp  main.cpp
source/database/: DBManager.cpp  MoviesDBManager.cpp
source/interface/: MainWindow.cpp  MainWindow.ui
source/models/: Movie.cpp
source/repositories/: IMoviesRepository.cpp
sours/: Movie.cpp  MovieDatabase.cpp  main.cpp
